# opencv

cmake/: OpenCVDetectPython.cmake
modules/python/: CMakeLists.txt  common.cmake
